<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="pin_search_title">Pin Catalog Search</string>
    <string name="pin_search_term_hint">Search term (e.g. game)</string>
    <string name="mark_as_my_post">Mark as my post</string>
    <string name="unmark_as_my_post">Forget post</string>
    <string name="permission_app_settings">App settings</string>
    <string name="permission_grant">Grant</string>
    <string name="update_later">Later</string>
    <string name="update_none">Clover is up-to-date</string>
    <string name="update_check_failed">Failed to check for updates.</string>
    <string name="update_install">Install</string>
    <string name="update_install_downloading">Downloading update</string>
    <string name="update_install_download_failed">Download failed</string>
    <string name="update_install_download_move_failed">Failed to move downloaded file to the Download directory.</string>
    <string name="update_retry_title">Retry update</string>
    <string name="update_retry">Clover was not updated yet. Tap \"retry\" to retry the install.</string>
    <string name="update_retry_button">retry</string>
    <string name="update_storage_permission_required_title">Storage permission required</string>
    <string name="update_storage_permission_required">
"Permission to access storage is required for installing the update.

Re-enable this permission in the app settings if you permanently disabled it."</string>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="posts">
        <item quantity="one">%d post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="reply">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <plurals name="image">
        <item quantity="one">%d image</item>
        <item quantity="other">%d images</item>
    </plurals>
    <plurals name="board">
        <item quantity="one">%d board</item>
        <item quantity="other">%d boards</item>
    </plurals>
    <plurals name="type">
        <item quantity="one">%d type</item>
        <item quantity="other">%d types</item>
    </plurals>
    <plurals name="bookmark">
        <item quantity="one">%d bookmark</item>
        <item quantity="other">%d bookmarks</item>
    </plurals>
    <plurals name="filter">
        <item quantity="one">%d filter</item>
        <item quantity="other">%d filters</item>
    </plurals>
    <plurals name="site">
        <item quantity="one">%d site</item>
        <item quantity="other">%d sites</item>
    </plurals>
    <string name="card_stats">%1$dR %2$dI</string>
    <string name="action_reload">Reload</string>
    <string name="action_pin">Bookmark</string>
    <string name="action_open_browser">Open in a browser</string>
    <string name="action_copy_url">Copy URL</string>
    <string name="action_share">Share</string>
    <string name="action_download_album">Download album</string>
    <string name="action_hide_image_info">Hide image info</string>
    <string name="action_show_image_info">Show image info</string>
    <string name="action_transparency_toggle">Toggle opacity</string>
    <string name="action_rotate_image">Rotate image</string>
    <string name="action_search">Search</string>
    <string name="action_search_image">Image search</string>
    <string name="action_switch_catalog">Catalog mode</string>
    <string name="action_switch_board">Board mode</string>
    <string name="action_scroll_to_top">Top</string>
    <string name="action_scroll_to_bottom">Bottom</string>
    <string name="action_sort">Sort</string>
    <string name="action_rename_pin">Rename bookmark</string>
    <string name="action_rename">Rename</string>
    <string name="action_reply">Reply</string>
    <string name="open_link_not_matched">Clover cannot open this link; it will open in your browser instead.</string>
    <string name="order_bump">Bump order</string>
    <string name="order_reply">Reply count</string>
    <string name="order_image">Image count</string>
    <string name="order_newest">Newest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_modified">Latest reply</string>
    <string name="order_activity">Thread activity</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Found %1$s for \"%2$s\"</string>
    <string name="search_empty">Search subjects, comments, names and filenames</string>
    <string name="open_link_confirmation">Open this link?</string>
    <string name="open_thread_confirmation">Open this thread?</string>
    <string name="open_board_link_confirmation">Open this cross-board link?</string>
    <string name="open_link_failed">No applications were found to open this link</string>
    <string name="action_confirm_exit_title">Confirm exit</string>
    <string name="thumbnail_load_failed_network">Error</string>
    <string name="thumbnail_load_failed_server" translatable="false">404</string>
    <string name="image_preview_failed">Failed to show image</string>
    <string name="image_preview_failed_oom">Failed to show image, out of memory</string>
    <string name="image_failed_big_image">Failed to show image, deep-zoom loading failed</string>
    <string name="image_not_found">Image not found</string>
    <string name="image_open_failed">Failed to open image</string>
    <string name="image_spoiler_filename">Spoiler image</string>
    <string name="file_not_viewable">File not internally viewable; you can still download this file or open it in your browser.</string>
    <string name="thread_boards_search_hint">Search</string>
    <string name="thread_load_failed_ssl">HTTPS error</string>
    <string name="thread_load_failed_network">Network error</string>
    <string name="thread_load_failed_parsing">No connection</string>
    <string name="thread_load_failed_server">Server error</string>
    <string name="thread_load_failed_not_found">404 not found</string>
    <string name="thread_refresh_bar_inactive">Tap to refresh</string>
    <string name="thread_refresh_now">Loading</string>
    <string name="thread_refresh_countdown">Loading in %1$ds</string>
    <string name="thread_load_failed_retry">Retry</string>
    <string name="thread_archived">Archived</string>
    <string name="thread_closed">Closed</string>
    <plurals name="thread_new_posts">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <string name="thread_new_posts_goto">View</string>
    <string name="thread_empty_select">Please select a thread</string>
    <string name="thread_up_down_hint">Scroll to top/bottom</string>
    <string name="thread_pin_hint">Bookmark this thread</string>
    <string name="thread_view_archive">Archive</string>
    <string name="thread_open_external_archive">External archive</string>
    <string name="thread_no_external_archives">No archives for this board or site.</string>
    <string name="thread_view_my_posts">View my posts</string>
    <string name="thread_no_posts_of_mine">You didn\'t post in this thread.</string>
    <string name="thread_empty_setup_feature" translatable="false">&#128564;</string>
    <string name="thread_empty_setup_title">Nothing to show</string>
    <string name="thread_empty_setup_body">Tap here to add a board to a site.</string>
    <string name="setup_sites_title">Setup sites</string>
    <string name="setup_sites_empty">No sites added</string>
    <string name="setup_sites_add_hint">Add a site here</string>
    <string name="setup_sites_add_title">Add site</string>
    <string name="setup_sites_description">Add a site by its URL or name</string>
    <string name="setup_sites_url">URL or name</string>
    <string name="setup_sites_url_hint" translatable="false">http://example.com</string>
    <string name="setup_sites_site_description">%s added</string>
    <string name="setup_sites_add_boards_hint">Tap to add boards</string>
    <string name="setup_site_title">Configure %s</string>
    <string name="setup_site_group_general">General</string>
    <string name="setup_site_boards">Setup boards</string>
    <string name="setup_site_boards_description">%s added</string>
    <string name="setup_site_group_login">Authentication</string>
    <string name="setup_site_group_login_4chan" translatable="false">4chan Pass</string>
    <string name="setup_site_login">Login</string>
    <string name="setup_site_login_8chan">Verification</string>
    <string name="setup_site_login_description_enabled">Logged in</string>
    <string name="setup_site_login_description_disabled">Off</string>
    <string name="setup_site_login_description_valid">Valid</string>
    <string name="setup_site_4chan_verification_group">Verification</string>
    <string name="setup_site_4chan_verify_email">Verify your email</string>
    <string name="setup_site_4chan_verify_email_description">Open email verification page</string>
    <string name="setup_site_4chan_verify_email_warning_title">Email verification</string>
    <string name="setup_site_4chan_verify_email_warning_body">Opening this page will clear all Cloudflare cookies.\n\nIf the 4chan page shows an error about \"scripts and cookies\", try to refresh the page. \n\nRemember, the email verification needs to be opened within Clover, not your regular browser. Please use the "Enter verification token" option below when you receive your email. \n\nDo you want to continue?</string>
    <string name="setup_site_4chan_verify_email_warning_open">Open</string>
    <string name="setup_site_4chan_enter_token">Enter verification token</string>
    <string name="setup_site_4chan_enter_token_description">Paste verification link or token</string>
    <string name="setup_site_4chan_pass_cookie_name">Verification cookie</string>
    <string name="setup_site_4chan_pass_cookie_set">Cookie is set</string>
    <string name="setup_site_4chan_pass_cookie_not_set">Not set</string>
    <string name="setup_site_4chan_pass_cookie_dialog_title">Verification cookie</string>
    <string name="reply_name">Name</string>
    <string name="reply_options">Options</string>
    <string name="reply_subject">Subject</string>
    <string name="reply_file_name">File name</string>
    <string name="reply_spoiler_image">Spoiler image</string>
    <string name="reply_submit">Submit</string>
    <string name="reply_attach_from_url">Long-press to attach from URL</string>
    <string name="reply_comment_button_quote" translatable="false">&gt;</string>
    <string name="reply_comment_button_spoiler" translatable="false">[s]</string>
    <string name="reply_comment_button_code" translatable="false">[c]</string>
    <string name="reply_comment_button_math" translatable="false">[mt]</string>
    <string name="reply_comment_button_eqn" translatable="false">[eq]</string>
    <string name="reply_comment_button_redtext" translatable="false">[SRZ]</string>
    <string name="reply_comment_button_italic" translatable="false">[I]</string>
    <string name="reply_comment_button_bold" translatable="false">[B]</string>
    <string name="_1x" translatable="false">1x</string>
    <string name="forward_15_seconds">Forward 15 seconds</string>
    <string name="rewind_5_seconds">Rewind 5 seconds</string>
    <string name="_play_pause">Play or pause the video</string>
</resources>