<?xml version="1.0" encoding="utf-8"?><!--
Clover - 4chan browser https://github.com/Floens/Clover/
Copyright (C) 2014  Floens

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:baselineAligned="false"
    android:minHeight="124dp"
    tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry">

        <LinearLayout
            android:id="@+id/reply_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#fff44336"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/name_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <Button
                    android:id="@+id/flag_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:hint="Flag"
                    android:padding="0dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints=""
                    android:hint="@string/reply_name"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/options"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:autofillHints=""
                    android:hint="@string/reply_options"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/reply_subject"
                android:inputType="textCapSentences|textAutoCorrect"
                android:singleLine="true"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.otacoo.chan.ui.view.SelectionListeningEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:imeActionLabel="@string/reply_submit"
                    android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                    android:maxLines="10"
                    android:minLines="5"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/comment_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:paddingRight="8dp"
                    android:textColor="?text_color_secondary"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/comment_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="SpUsage">

                <Button
                    android:id="@+id/comment_quote"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_quote"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_spoiler"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_spoiler"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_code"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_code"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_math"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_math"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_eqn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_eqn"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_redtext"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_redtext"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_italic"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_italic"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/comment_bold"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    android:text="@string/reply_comment_button_bold"
                    android:textAllCaps="false"
                    android:textSize="15dp"
                    android:visibility="gone" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/spoiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reply_spoiler_image"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/file_attachments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/preview_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/preview_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/preview_spacer_left"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/preview"
                        android:layout_width="128dp"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter" />

                    <View
                        android:id="@+id/preview_spacer_right"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/preview_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/reply_file_name"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/more"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/attach"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="10dp"
                android:tooltipText="@string/reply_attach_from_url" />

            <ImageView
                android:id="@+id/submit"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
