<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#A0000000"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/player_rew"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rewind_5_seconds"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_rewind_white_24dp" />

        <ImageButton
            android:id="@+id/player_play_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/_play_pause"
            android:src="@drawable/ic_play_circle_filled_white" />

        <ImageButton
            android:id="@+id/player_ffwd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/forward_15_seconds"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fast_forward_white_24dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/player_playback_speed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:padding="8dp"
            android:text="@string/_1x"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/player_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progressTint="#FFFFFF"
            android:progressBackgroundTint="#80FFFFFF"
            android:thumbTint="#FFFFFF" />

        <TextView
            android:id="@+id/player_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingEnd="0dp"
            android:paddingStart="8dp"
            android:layout_marginEnd="5dp"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
